Prevent tserver shutdown when only 1 tserver running.
* Closes #1753

Add new test to ShutdownTServerTest and rewrite single test